<resources>
    <string name="app_name">MapAccount</string>
    <string name="action_settings">Settings</string>
    <string name="my_map">我的美食地圖</string>
    <string name="in_out">支出與收入</string>
    <string name="new_coast">新 增 金 額</string>
    <string name="new_finish">新 增 完 成</string>
    <string name="day">日</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="balance">結餘</string>
    <string name="all_coast">總支出</string>
    <string name="all_income">總收入</string>
    <string name="coast_show">支 出 項 目</string>
    <string name="income_show">收 入 項 目</string>
    <string name="coast">支 出</string>
    <string name="income">收 入</string>
    <string name="go_new">開始新增</string>
    <string name="please_input_item">請輸入項目</string>
    <string name="item_name">項 目 名 稱</string>
    <string name="new_input">新 增</string>
    <string name="go_back">返 回</string>
    <string name="edit_view">編 輯 項 目</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="edit">編 輯</string>
    <string name="clear">刪 除</string>
    <string name="finish">完 成</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="error_location_provider">hello</string>

</resources>
