<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="30">

        <Button
            android:id="@+id/finish_edit_object"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="@color/colorPrimary"
            android:text="@string/go_back"
            android:textColor="@android:color/background_light"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/edit_view"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/colorPrimaryDark"
            android:editable="false"
            android:gravity="center"
            android:text="@string/edit_view"
            android:textColor="@android:color/white"
            android:textSize="34sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="30"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:hint="@string/please_input_item"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_new"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:text="@string/new_input"
            android:textSize="18dp" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:checked="true"
            android:showText="true"
            android:textOff="收入"
            android:textOn="支出" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="30"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#ffbbcc"
            android:gravity="center"
            android:text="@string/item_name"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="#ffbbcc"
            android:gravity="center"
            android:text="@string/edit"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="#ffbbcc"
            android:gravity="center"
            android:text="@string/clear"
            android:textSize="16dp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/itembk"
        android:layout_weight="7">

        <LinearLayout
            android:id="@+id/table_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>

</LinearLayout>